# alfac

./: .gitignore  README.md  pyproject.toml
alfac/: validator.py
tests/: test_validator.py
